2009-09-18  Thomas Moulard  <thomas.moulard@gmail.com>

	Document.
	* include/roboptim/core/finite-difference-gradient.hh:
	Document finite difference gradients policies.

2009-09-18  Thomas Moulard  <thomas.moulard@gmail.com>

	Synchronize build-aux.
	* build-aux: Here.

2009-09-18  Thomas Moulard  <thomas.moulard@gmail.com>

	Synchronize with build-aux.
	* build-aux: Here.

2009-09-18  Thomas Moulard  <thomas.moulard@gmail.com>

	Fix error insize types.
	* include/roboptim/core/derivable-parametrized-function.hh:
	Replace size_t by size_type.
	* include/roboptim/core/twice-derivable-function.hh:
	Define hessian size as a pair of size and not as a pair of floating
	points values.

2009-09-18  Thomas Moulard  <thomas.moulard@gmail.com>

	Fix Doxygen comments.
	* include/roboptim/core/constant-function.hh,
	* include/roboptim/core/derivable-function.hh,
	* include/roboptim/core/derivable-parametrized-function.hh,
	* include/roboptim/core/function.hh,
	* include/roboptim/core/generic-solver.hh,
	* include/roboptim/core/identity-function.hh,
	* include/roboptim/core/n-times-derivable-function.hh,
	* include/roboptim/core/numeric-linear-function.hh,
	* include/roboptim/core/numeric-quadratic-function.hh,
	* include/roboptim/core/parametrized-function.hh,
	* src/constant-function.cc: Fix Doxygen comments.

2009-09-18  Thomas Moulard  <thomas.moulard@gmail.com>

	Update Doxygen generation rules.
	* .gitmodules: Remove doc submodule.
	* build-aux: Update to new version.
	* doc/Doxyfile.extra: New.
	* doc/Makefile.am: New.
	* doc: Remove.

2009-08-31  Thomas Moulard  <thomas.moulard@gmail.com>

	Add policies to finite-difference gradients computation.
	* include/Makefile.am: Distribute new header.
	* include/roboptim/core/finite-difference-gradient.hh:
	Add policies and template FiniteDifferenceGradient by them.
	* include/roboptim/core/finite-difference-gradient.hxx: New.
	* include/roboptim/core/fwd.hh: Update forward declaration,
	make FivePointsRule the default policy.